ebay-deployment-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ebay-deployment
  labels:
    app: ebay
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ebay
  template:
    metadata:
      labels:
        app: ebay
    spec:
      containers:
      - name: ebay 
        image: ebayimage
        ports:
        - containerPort: 8080
