ingress-controller-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ngnix-ingress
  template:
    metadata:
      labels:
        name: nginx-ingress
  spec:
    containers:
      - name: nginx-ingress-controller
        image: registry.k8s.io/ingress-nginx/controller:v1.0.5
    
    args: 
      - /nginx-ingress-controller
      - --configmap= $(POD_NAMESPACE)/nginx-configuration

    ports:
      - name: http
      containerPort: 80
      - name: https
      containerPort: 443
