ebay-service-definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: ebay-service
spec:
  type: NodePort
  selector:
    app: ebay
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30038
